--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                     </div>
                 </div>
             </div>
-            <!-- Question popup ends -->
 
-            <!-- contest finish popup start -->
+        </div>
+ 
+    <!-- contest fisnish popup end -->
+    </div>
 
             <div class="popup-wrap">
                 <div class="popup-content-wrap">
