Adding loading text WIP

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
 
     <body>
+
         <!-- header section start -->
         <header>
             <a href="#" class="logo-wrap">
@@ -23,10 +24,7 @@
         </header>
         <!-- header section end -->
 
-        <!-- updated added overlap content wrap as parent to timer wrap and quiz popup -->
-
         <div class="overlap-content-wrap">
-
 
             <!-- timer section -->
 
@@ -41,8 +39,6 @@
                     <span class="question-indicator timer-copy">Question 10/10</span>
                 </div>
             </div>
-
-            <!-- <div class="timer"></div> -->
 
             <!-- timer section end -->
 
@@ -68,6 +64,9 @@
                     </div>
                 </div>
             </div>
+            <!-- Question popup ends -->
+
+            <!-- Share to facebook popup starts -->
 
         </div>
  
@@ -89,7 +88,7 @@
                 </div>
             </div>
 
-            <!-- contest fisnish popup end -->
+            <!-- Share to facebook popup end -->
         </div>
 
         <!-- updated added overlap content wrap as parent to timer wrap and quiz popup -->
@@ -97,8 +96,7 @@
 
         <div id="game">
             <!-- Game runs here -->
-
-
+            <div class="loading">Loading.</div>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
