Smoother animations and adding username to the header

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
         <div class="timer-wrap test-2">
             <div class="timer-part timer-part-sides timer-part-left">
-                <span class="player-name timer-copy">Arjun Mulky arjun</span>
+                <span class="player-name timer-copy"></span>
             </div>
             <div class="timer-part timer-part-center">
                 <span class="timer-counter"></span>
             </div>
             <div class="timer-part timer-part-sides timer-part-right">
-                <span class="question-indicator timer-copy">Question 10/10</span>
+                <span class="question-indicator timer-copy">Question 0/10</span>
             </div>
         </div>
 
