--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </div>
             <div class="timer-part timer-part-center">
                 <span class="timer-counter"></span>
+                <span class="penalty">&#43;15 secs</span>
             </div>
             <div class="timer-part timer-part-sides timer-part-right">
                 <span class="question-indicator timer-copy">Question 0/10</span>
