--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="penalty">&#43;15 secs</span>
             </div>
             <div class="timer-part timer-part-sides timer-part-right">
-                <span class="question-indicator timer-copy">Question 0/10</span>
+                <span class="question-indicator timer-copy">Checkpoint 0/10</span>
             </div>
         </div>
 
